<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <!-- Logo Text -->
        <TextView
            android:id="@+id/tvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="40dp"
            android:text="@string/splash_title"
            android:textColor="@color/primary_orange"
            android:textSize="32sp"
            android:textStyle="bold" />

        <!-- Email -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/card_dark"
            android:hint="@string/hint_email"
            android:padding="12dp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary" />

        <!-- Password -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:background="@color/card_dark"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/text_primary"
            android:textColorHint="@color/text_secondary" />

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/primary_orange"
            android:text="@string/btn_login"
            android:textColor="@color/background_dark" />

        <!-- Forgot Password -->
        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/btn_forgot_password"
            android:textColor="@color/text_secondary"
            android:textSize="14sp" />

        <!-- Signup -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_no_account"
                android:textColor="@color/text_secondary"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvGoSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="6dp"
                android:text="@string/btn_signup_redirect"
                android:textColor="@color/primary_orange"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
