<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvChangePasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/label_change_password"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Old Password -->
    <EditText
        android:id="@+id/etOldPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/card_dark"
        android:hint="@string/hint_old_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

    <!-- New Password -->
    <EditText
        android:id="@+id/etNewPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@color/card_dark"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

    <EditText
        android:id="@+id/etConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="14dp"
        android:background="@color/card_dark"
        android:hint="@string/hint_confirm_new_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary" />

    <!-- Confirm button -->
    <Button
        android:id="@+id/btnConfirmChangePass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary_orange"
        android:text="@string/btn_change_password"
        android:textColor="@color/background_dark" />

</LinearLayout>
