<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Workout Title -->
        <TextView
            android:id="@+id/tvWorkoutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/workout_title_placeholder"
            android:textColor="@color/primary_orange"
            android:textSize="26sp"
            android:textStyle="bold" />

        <!-- Description -->
        <TextView
            android:id="@+id/tvWorkoutDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/workout_description_placeholder"
            android:textColor="@color/text_secondary"
            android:textSize="16sp" />

        <!-- View Exercises Button -->
        <Button
            android:id="@+id/btnViewExercises"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:backgroundTint="@color/primary_orange"
            android:text="@string/btn_view_exercises"
            android:textColor="@color/background_dark" />

        <!-- Start Workout Button -->
        <Button
            android:id="@+id/btnStartWorkout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="14dp"
            android:backgroundTint="@color/primary_orange"
            android:text="@string/btn_start_workout"
            android:textColor="@color/background_dark" />

    </LinearLayout>

</ScrollView>
