<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical"
    android:padding="16dp">

  <!-- Greeting -->
  <TextView
      android:id="@+id/tvGreeting"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="18dp"
      android:text="@string/home_greeting"
      android:textColor="@color/text_primary"
      android:textSize="24sp"
      android:textStyle="bold" />

  <!-- WORKOUT CARD -->
  <androidx.cardview.widget.CardView
      android:id="@+id/cardWorkouts"
      android:layout_width="match_parent"
      android:layout_height="120dp"
      android:layout_marginBottom="12dp"
      app:cardBackgroundColor="@color/card_dark"
      app:cardCornerRadius="16dp">

    <TextView
        android:id="@+id/tvCardWorkouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/home_card_workouts"
        android:textColor="@color/primary_orange"
        android:textSize="18sp" />
  </androidx.cardview.widget.CardView>

  <!-- PROGRESS CARD -->
  <androidx.cardview.widget.CardView
      android:id="@+id/cardProgress"
      android:layout_width="match_parent"
      android:layout_height="120dp"
      android:layout_marginBottom="12dp"
      app:cardBackgroundColor="@color/card_dark"
      app:cardCornerRadius="16dp">

    <TextView
        android:id="@+id/tvCardProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/home_card_progress"
        android:textColor="@color/primary_orange"
        android:textSize="18sp" />
  </androidx.cardview.widget.CardView>

  <!-- MEALS CARD -->
  <androidx.cardview.widget.CardView
      android:id="@+id/cardMeals"
      android:layout_width="match_parent"
      android:layout_height="120dp"
      app:cardBackgroundColor="@color/card_dark"
      app:cardCornerRadius="16dp">

    <TextView
        android:id="@+id/tvCardMeals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/home_card_meals"
        android:textColor="@color/primary_orange"
        android:textSize="18sp" />
  </androidx.cardview.widget.CardView>

</LinearLayout>
